[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["Anteater Proboscis <AnteaterProboscis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
pydantic = "^2.10.5"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pytest = "^8.3.4"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
